<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@mipmap/home" android:id="@id/nav_home" android:title="@string/home" />
    <item android:icon="@mipmap/cat" android:id="@id/nav_cat" android:title="@string/category" />
    <item android:icon="@mipmap/artist" android:id="@id/nav_artist" android:title="@string/artist" />
    <item android:icon="@mipmap/heart" android:id="@id/nav_fav" android:title="@string/favourite" />
    <item android:icon="@mipmap/download" android:id="@id/nav_downlaod" android:title="@string/downloads" />
    <item android:icon="@mipmap/rate" android:id="@id/nav_rate" android:title="@string/rate_app" />
    <item android:icon="@mipmap/share_nav" android:id="@id/nav_share" android:title="@string/share_app" />
    <item android:icon="@mipmap/more" android:id="@id/nav_more" android:title="@string/more_app" />
    <item android:icon="@mipmap/about" android:id="@id/nav_about" android:title="@string/menu_about" />
    <item android:icon="@mipmap/privacy" android:id="@id/nav_privacy" android:title="@string/privacy" />
    <item android:id="@id/nav_dummy" android:title="" />
</menu>